--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -42,3 +42,11 @@ contributors:
  organization: Tampere University
  project: 
  comments: 
+ -
+ name: 
+ surname: 
+ mail:
+ organization: IUDX
+ project: 
+ comments: 
+
