--- a/ThreePhaseAcMeasurement/model.yaml
+++ b/ThreePhaseAcMeasurement/model.yaml
@@ -402,7 +402,7 @@ ThreePhaseAcMeasurement:
           type: number
       type: object
       x-ngsi:
-        model: (http://schema.org/StructuredValue
+        model: http://schema.org/StructuredValue
         type: Property
         units: 'Volts (V)'
     phaseVoltage:
@@ -667,8 +667,8 @@ ThreePhaseAcMeasurement:
     - type
   type: object
   x-derived-from: ""
-  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2021 Contributors to Smart Data Models Program'
+  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program'
   x-license-url: https://github.com/smart-data-models/dataModel.Energy/blob/master/ThreePhaseAcMeasurement/LICENSE.md
   x-model-schema: https://smart-data-models.github.io/dataModel.Energy/ThreePhaseAcMeasurement/schema.json
   x-model-tags: ""
-  x-version: 0.0.2
+  x-version: 0.0.3
