--- a/SolarEnergy/model.yaml
+++ b/SolarEnergy/model.yaml
@@ -1,5 +1,5 @@
 SolarEnergy:
-  description: 'A Data Model for Solar Energy generation.'
+  description: A Data Model for Solar Energy generation.
   properties:
     activePower:
       description: 'The actual values will beconveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3. '
@@ -14,9 +14,9 @@ SolarEnergy:
       x-ngsi:
         model: http://schema.org/StructuredValue
         type: Property
-        units: 'watt (W).Active power consumed per phase'
+        units: watt (W).Active power consumed per phase
     address:
-      description: 'The mailing address'
+      description: The mailing address
       properties:
         addressCountry:
           description: 'Property. The country. For example, Spain. Model:''https://schema.org/addressCountry'''
@@ -27,6 +27,9 @@ SolarEnergy:
         addressRegion:
           description: 'Property. The region in which the locality is, and which is in the country. Model:''https://schema.org/addressRegion'''
           type: string
+        district:
+          description: 'A district is a type of administrative division that, in some countries, is managed by the local government.'
+          type: string
         postOfficeBoxNumber:
           description: 'Property. The post office box number for PO box addresses. For example, 03578. Model:''https://schema.org/postOfficeBoxNumber'''
           type: string
@@ -36,17 +39,20 @@ SolarEnergy:
         streetAddress:
           description: 'Property. The street address. Model:''https://schema.org/streetAddress'''
           type: string
+        streetNr:
+          description: Number identifying a specific property on a public street.
+          type: string
       type: object
       x-ngsi:
         model: https://schema.org/address
         type: Property
     alternateName:
-      description: 'An alternative name for this item'
+      description: An alternative name for this item
       type: string
       x-ngsi:
         type: Property
     areaServed:
-      description: 'The geographic area where a service or offered item is provided'
+      description: The geographic area where a service or offered item is provided
       type: string
       x-ngsi:
         model: https://schema.org/Text
@@ -66,61 +72,61 @@ SolarEnergy:
       x-ngsi:
         model: http://schema.org/StructuredValue
         type: Property
-        units: 'Ampers (A)'
+        units: Ampers (A)
     dataDescriptor:
-      description: 'URI pointing to the data-descriptor entity'
+      description: URI pointing to the data-descriptor entity
       type: string
       x-ngsi:
         type: Relationship
     dataProvider:
-      description: 'A sequence of characters identifying the provider of the harmonised data entity.'
+      description: A sequence of characters identifying the provider of the harmonised data entity.
       type: string
       x-ngsi:
         type: Property
     dateCreated:
-      description: 'Entity creation timestamp. This will usually be allocated by the storage platform.'
+      description: Entity creation timestamp. This will usually be allocated by the storage platform.
       format: date-time
       type: string
       x-ngsi:
         type: Property
     dateModified:
-      description: 'Timestamp of the last modification of the entity. This will usually be allocated by the storage platform.'
+      description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform.
       format: date-time
       type: string
       x-ngsi:
         type: Property
     description:
-      description: 'A description of this item'
+      description: A description of this item
       type: string
       x-ngsi:
         type: Property
     energyGenerated:
-      description: 'Energy generated over a specific time range from the energy resource corresponding to this observation.'
+      description: Energy generated over a specific time range from the energy resource corresponding to this observation.
       type: number
       x-ngsi:
         type: Property
     frequency:
-      description: 'Frequency observed from the entity corresponding to this observation.'
+      description: Frequency observed from the entity corresponding to this observation.
       type: number
       x-ngsi:
         type: Property
     id:
       anyOf: &solarenergy_-_properties_-_owner_-_items_-_anyof
-        - description: 'Property. Identifier format of any NGSI entity'
+        - description: Property. Identifier format of any NGSI entity
           maxLength: 256
           minLength: 1
           pattern: ^[\w\-\.\{\}\$\+\*\[\]`|~^@!,:\\]+$
           type: string
-        - description: 'Property. Identifier format of any NGSI entity'
+        - description: Property. Identifier format of any NGSI entity
           format: uri
           type: string
-      description: 'Unique identifier of the entity'
+      description: Unique identifier of the entity
       x-ngsi:
         type: Property
     location:
       description: 'Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon'
       oneOf:
-        - description: 'Geoproperty. Geojson reference to the item. Point'
+        - description: GeoProperty. Geojson reference to the item. Point
           properties:
             bbox:
               items:
@@ -139,9 +145,9 @@ SolarEnergy:
           required:
             - type
             - coordinates
-          title: 'GeoJSON Point'
+          title: GeoJSON Point
           type: object
-        - description: 'Geoproperty. Geojson reference to the item. LineString'
+        - description: GeoProperty. Geojson reference to the item. LineString
           properties:
             bbox:
               items:
@@ -163,9 +169,9 @@ SolarEnergy:
           required:
             - type
             - coordinates
-          title: 'GeoJSON LineString'
+          title: GeoJSON LineString
           type: object
-        - description: 'Geoproperty. Geojson reference to the item. Polygon'
+        - description: GeoProperty. Geojson reference to the item. Polygon
           properties:
             bbox:
               items:
@@ -189,9 +195,9 @@ SolarEnergy:
           required:
             - type
             - coordinates
-          title: 'GeoJSON Polygon'
+          title: GeoJSON Polygon
           type: object
-        - description: 'Geoproperty. Geojson reference to the item. MultiPoint'
+        - description: GeoProperty. Geojson reference to the item. MultiPoint
           properties:
             bbox:
               items:
@@ -212,9 +218,9 @@ SolarEnergy:
           required:
             - type
             - coordinates
-          title: 'GeoJSON MultiPoint'
+          title: GeoJSON MultiPoint
           type: object
-        - description: 'Geoproperty. Geojson reference to the item. MultiLineString'
+        - description: GeoProperty. Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -238,9 +244,9 @@ SolarEnergy:
           required:
             - type
             - coordinates
-          title: 'GeoJSON MultiLineString'
+          title: GeoJSON MultiLineString
           type: object
-        - description: 'Geoproperty. Geojson reference to the item. MultiLineString'
+        - description: GeoProperty. Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -266,31 +272,31 @@ SolarEnergy:
           required:
             - type
             - coordinates
-          title: 'GeoJSON MultiPolygon'
+          title: GeoJSON MultiPolygon
           type: object
       x-ngsi:
-        type: Geoproperty
+        type: GeoProperty
     maxSolarPowerMeasure:
-      description: 'A measure of maximum solar energy that can be generated.'
+      description: A measure of maximum solar energy that can be generated.
       type: number
       x-ngsi:
         type: Property
     name:
-      description: 'The name of this item.'
+      description: The name of this item.
       type: string
       x-ngsi:
         type: Property
     observationDateTime:
-      description: 'Last reported time of observation.'
+      description: Last reported time of observation.
       format: date-time
       type: string
       x-ngsi:
         type: Property
     owner:
-      description: 'A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)'
+      description: A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)
       items:
         anyOf: *solarenergy_-_properties_-_owner_-_items_-_anyof
-        description: 'Property. Unique identifier of the entity'
+        description: Property. Unique identifier of the entity
       type: array
       x-ngsi:
         type: Property
@@ -322,7 +328,7 @@ SolarEnergy:
       x-ngsi:
         model: http://schema.org/StructuredValue
         type: Property
-        units: 'Volts (V)'
+        units: Volts (V)
     powerFactor:
       description: 'Power factor for each phase. The actual values will be conveyed by one subproperty per alternating current phase: L1, L2 and L3'
       properties:
@@ -342,7 +348,7 @@ SolarEnergy:
       x-ngsi:
         model: http://schema.org/StructuredValue
         type: Property
-        units: '-1 to +1'
+        units: -1 to +1
     reactivePower:
       description: 'Fundamental frequency reactive power. The actual values will be conveyed by subproperties whose names will be equal to the name of each of the alternating current phases: L1, L2, L3.'
       properties:
@@ -356,9 +362,9 @@ SolarEnergy:
       x-ngsi:
         model: http://schema.org/StructuredValue
         type: Property
-        units: 'volts-ampere-reactive (VAr)'
+        units: volts-ampere-reactive (VAr)
     seeAlso:
-      description: 'list of uri pointing to additional resources about the item'
+      description: list of uri pointing to additional resources about the item
       oneOf:
         - items:
             format: uri
@@ -375,29 +381,29 @@ SolarEnergy:
       x-ngsi:
         type: Property
     totalActivePower:
-      description: 'Total active power consumed by all phases.'
+      description: Total active power consumed by all phases.
       type: number
       x-ngsi:
         type: Property
     totalEnergyGenerated:
-      description: 'Total energy generated by the energy resource corresponding to this observation.'
+      description: Total energy generated by the energy resource corresponding to this observation.
       type: number
       x-ngsi:
         type: Property
     totalReactivePower:
-      description: 'Total reactive power for all phases.'
+      description: Total reactive power for all phases.
       type: number
       x-ngsi:
         type: Property
     type:
-      description: 'NGSI Entity type. It has to be SolarEnergy'
+      description: NGSI Entity type. It has to be SolarEnergy
       enum:
         - SolarEnergy
       type: string
       x-ngsi:
         type: Property
     voltage:
-      description: 'The value of Voltage in the entity corresponding to this observation.'
+      description: The value of Voltage in the entity corresponding to this observation.
       type: number
       x-ngsi:
         type: Property
@@ -406,7 +412,7 @@ SolarEnergy:
     - type
   type: object
   x-derived-from: https://voc.iudx.org.in/SolarEnergy
-  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2021 Contributors to Smart Data Models Program'
+  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program'
   x-license-url: https://github.com/smart-data-models/dataModel.Energy/blob/master/SolarEnergy/LICENSE.md
   x-model-schema: https://smart-data-models.github.io/dataModel.Energy/SolarEnergy/schema.json
   x-model-tags: IUDX
