--- a/SolarEnergy/model.yaml
+++ b/SolarEnergy/model.yaml
@@ -1,6 +1,9 @@
 SolarEnergy:
+
   description: A Data Model for Solar Energy generation.
+
   properties:
+
     activePower:
       description: 'The actual values will beconveyed by subproperties which names will be equal to the name of each of the alternating current phases: L1, L2, L3. '
       properties:
@@ -15,50 +18,88 @@ SolarEnergy:
         model: http://schema.org/StructuredValue
         type: Property
         units: watt (W).Active power consumed per phase
+
     address:
+
       description: The mailing address
+
       properties:
+
         addressCountry:
-          description: 'Property. The country. For example, Spain. Model:''https://schema.org/addressCountry'''
+          description: The country. For example, Spain
           type: string
+          x-ngsi:
+            model: https://schema.org/addressCountry
+            type: Property
+
         addressLocality:
-          description: 'Property. The locality in which the street address is, and which is in the region. Model:''https://schema.org/addressLocality'''
+          description: The locality in which the street address is, and which is in the region
           type: string
+          x-ngsi:
+            model: https://schema.org/addressLocality
+            type: Property
+
         addressRegion:
-          description: 'Property. The region in which the locality is, and which is in the country. Model:''https://schema.org/addressRegion'''
+          description: The region in which the locality is, and which is in the country
           type: string
+          x-ngsi:
+            model: https://schema.org/addressRegion
+            type: Property
+
         district:
-          description: 'A district is a type of administrative division that, in some countries, is managed by the local government.'
+          description: A district is a type of administrative division that, in some countries, is managed by the local government
           type: string
+          x-ngsi:
+            type: Property
+
         postOfficeBoxNumber:
-          description: 'Property. The post office box number for PO box addresses. For example, 03578. Model:''https://schema.org/postOfficeBoxNumber'''
+          description: The post office box number for PO box addresses. For example, 03578
           type: string
+          x-ngsi:
+            model: https://schema.org/postOfficeBoxNumber
+            type: Property
+
         postalCode:
-          description: 'Property. The postal code. For example, 24004. Model:''https://schema.org/https://schema.org/postalCode'''
+          description: The postal code. For example, 24004
           type: string
+          x-ngsi:
+            model: https://schema.org/https://schema.org/postalCode
+            type: Property
+
         streetAddress:
-          description: 'Property. The street address. Model:''https://schema.org/streetAddress'''
+          description: The street address
           type: string
+          x-ngsi:
+            model: https://schema.org/streetAddress
+            type: Property
+
         streetNr:
-          description: Number identifying a specific property on a public street.
+          description: Number identifying a specific property on a public street
           type: string
+          x-ngsi:
+            type: Property
+
       type: object
+
       x-ngsi:
         model: https://schema.org/address
         type: Property
+
     alternateName:
       description: An alternative name for this item
       type: string
       x-ngsi:
         type: Property
+
     areaServed:
       description: The geographic area where a service or offered item is provided
       type: string
       x-ngsi:
         model: https://schema.org/Text
         type: Property
+
     current:
-      description: 'Electrical current. The actual values will be conveyed by one subproperty per alternating current phase and the neutral wire: L1, L2, L3 and N.'
+      description: 'Electrical current. The actual values will be conveyed by one subproperty per alternating current phase and the neutral wire: L1, L2, L3 and N'
       properties:
         L1:
           type: number
@@ -73,60 +114,76 @@ SolarEnergy:
         model: http://schema.org/StructuredValue
         type: Property
         units: Ampers (A)
+
     dataDescriptor:
       description: URI pointing to the data-descriptor entity
       type: string
       x-ngsi:
         type: Relationship
+
     dataProvider:
-      description: A sequence of characters identifying the provider of the harmonised data entity.
+      description: A sequence of characters identifying the provider of the harmonised data entity
       type: string
       x-ngsi:
         type: Property
+
     dateCreated:
-      description: Entity creation timestamp. This will usually be allocated by the storage platform.
+      description: Entity creation timestamp. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
+
     dateModified:
-      description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform.
+      description: Timestamp of the last modification of the entity. This will usually be allocated by the storage platform
       format: date-time
       type: string
       x-ngsi:
         type: Property
+
     description:
       description: A description of this item
       type: string
       x-ngsi:
         type: Property
+
     energyGenerated:
-      description: Energy generated over a specific time range from the energy resource corresponding to this observation.
+      description: Energy generated over a specific time range from the energy resource corresponding to this observation
       type: number
       x-ngsi:
         type: Property
+
     frequency:
-      description: Frequency observed from the entity corresponding to this observation.
+      description: Frequency observed from the entity corresponding to this observation
       type: number
       x-ngsi:
         type: Property
+
     id:
-      anyOf: &solarenergy_-_properties_-_owner_-_items_-_anyof
-        - description: Property. Identifier format of any NGSI entity
+      anyOf:
+        - description: Identifier format of any NGSI entity
           maxLength: 256
           minLength: 1
           pattern: ^[\w\-\.\{\}\$\+\*\[\]`|~^@!,:\\]+$
           type: string
-        - description: Property. Identifier format of any NGSI entity
+          x-ngsi:
+            type: Property
+        - description: Identifier format of any NGSI entity
           format: uri
           type: string
+          x-ngsi:
+            type: Property
       description: Unique identifier of the entity
       x-ngsi:
         type: Property
+
     location:
-      description: 'Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon'
+
+      description: Geojson reference to the item. It can be Point, LineString, Polygon, MultiPoint, MultiLineString or MultiPolygon
+
       oneOf:
-        - description: GeoProperty. Geojson reference to the item. Point
+
+        - description: Geojson reference to the item. Point
           properties:
             bbox:
               items:
@@ -147,7 +204,10 @@ SolarEnergy:
             - coordinates
           title: GeoJSON Point
           type: object
-        - description: GeoProperty. Geojson reference to the item. LineString
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. LineString
           properties:
             bbox:
               items:
@@ -171,7 +231,10 @@ SolarEnergy:
             - coordinates
           title: GeoJSON LineString
           type: object
-        - description: GeoProperty. Geojson reference to the item. Polygon
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. Polygon
           properties:
             bbox:
               items:
@@ -197,7 +260,10 @@ SolarEnergy:
             - coordinates
           title: GeoJSON Polygon
           type: object
-        - description: GeoProperty. Geojson reference to the item. MultiPoint
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. MultiPoint
           properties:
             bbox:
               items:
@@ -220,7 +286,10 @@ SolarEnergy:
             - coordinates
           title: GeoJSON MultiPoint
           type: object
-        - description: GeoProperty. Geojson reference to the item. MultiLineString
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -246,7 +315,10 @@ SolarEnergy:
             - coordinates
           title: GeoJSON MultiLineString
           type: object
-        - description: GeoProperty. Geojson reference to the item. MultiLineString
+          x-ngsi:
+            type: GeoProperty
+
+        - description: Geojson reference to the item. MultiLineString
           properties:
             bbox:
               items:
@@ -274,32 +346,54 @@ SolarEnergy:
             - coordinates
           title: GeoJSON MultiPolygon
           type: object
+          x-ngsi:
+            type: GeoProperty
+
       x-ngsi:
         type: GeoProperty
+
     maxSolarPowerMeasure:
-      description: A measure of maximum solar energy that can be generated.
+      description: A measure of maximum solar energy that can be generated
       type: number
       x-ngsi:
         type: Property
+
     name:
-      description: The name of this item.
+      description: The name of this item
       type: string
       x-ngsi:
         type: Property
+
     observationDateTime:
-      description: Last reported time of observation.
+      description: Last reported time of observation
       format: date-time
       type: string
       x-ngsi:
         type: Property
+
     owner:
       description: A List containing a JSON encoded sequence of characters referencing the unique Ids of the owner(s)
       items:
-        anyOf: *solarenergy_-_properties_-_owner_-_items_-_anyof
-        description: Property. Unique identifier of the entity
+        anyOf:
+          - description: Identifier format of any NGSI entity
+            maxLength: 256
+            minLength: 1
+            pattern: ^[\w\-\.\{\}\$\+\*\[\]`|~^@!,:\\]+$
+            type: string
+            x-ngsi:
+              type: Property
+          - description: Identifier format of any NGSI entity
+            format: uri
+            type: string
+            x-ngsi:
+              type: Property
+        description: Unique identifier of the entity
+        x-ngsi:
+          type: Property
       type: array
       x-ngsi:
         type: Property
+
     phaseCurrent:
       description: 'Current per phase. Ordered triple comprising of active power from three phases in the following order: [R Y B]'
       properties:
@@ -312,6 +406,7 @@ SolarEnergy:
       type: object
       x-ngsi:
         type: Property
+
     phaseVoltage:
       description: 'The voltage between each phase and neutral conductor. The actual values will be conveyed by one subproperty per alternating current phase: L1, L2 and L3'
       properties:
@@ -329,6 +424,7 @@ SolarEnergy:
         model: http://schema.org/StructuredValue
         type: Property
         units: Volts (V)
+
     powerFactor:
       description: 'Power factor for each phase. The actual values will be conveyed by one subproperty per alternating current phase: L1, L2 and L3'
       properties:
@@ -349,8 +445,9 @@ SolarEnergy:
         model: http://schema.org/StructuredValue
         type: Property
         units: -1 to +1
+
     reactivePower:
-      description: 'Fundamental frequency reactive power. The actual values will be conveyed by subproperties whose names will be equal to the name of each of the alternating current phases: L1, L2, L3.'
+      description: 'Fundamental frequency reactive power. The actual values will be conveyed by subproperties whose names will be equal to the name of each of the alternating current phases: L1, L2, L3'
       properties:
         L1:
           type: number
@@ -363,6 +460,7 @@ SolarEnergy:
         model: http://schema.org/StructuredValue
         type: Property
         units: volts-ampere-reactive (VAr)
+
     seeAlso:
       description: list of uri pointing to additional resources about the item
       oneOf:
@@ -375,26 +473,31 @@ SolarEnergy:
           type: string
       x-ngsi:
         type: Property
+
     source:
-      description: 'A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object.'
+      description: A sequence of characters giving the original source of the entity data as a URL. Recommended to be the fully qualified domain name of the source provider, or the URL to the source object
       type: string
       x-ngsi:
         type: Property
+
     totalActivePower:
-      description: Total active power consumed by all phases.
+      description: Total active power consumed by all phases
       type: number
       x-ngsi:
         type: Property
+
     totalEnergyGenerated:
-      description: Total energy generated by the energy resource corresponding to this observation.
+      description: Total energy generated by the energy resource corresponding to this observation
       type: number
       x-ngsi:
         type: Property
+
     totalReactivePower:
-      description: Total reactive power for all phases.
+      description: Total reactive power for all phases
       type: number
       x-ngsi:
         type: Property
+
     type:
       description: NGSI Entity type. It has to be SolarEnergy
       enum:
@@ -402,18 +505,27 @@ SolarEnergy:
       type: string
       x-ngsi:
         type: Property
+
     voltage:
-      description: The value of Voltage in the entity corresponding to this observation.
+      description: The value of Voltage in the entity corresponding to this observation
       type: number
       x-ngsi:
         type: Property
+
   required:
     - id
     - type
+
   type: object
+
   x-derived-from: https://voc.iudx.org.in/SolarEnergy
-  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program'
+
+  x-disclaimer: Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2022 Contributors to Smart Data Models Program
+
   x-license-url: https://github.com/smart-data-models/dataModel.Energy/blob/master/SolarEnergy/LICENSE.md
+
   x-model-schema: https://smart-data-models.github.io/dataModel.Energy/SolarEnergy/schema.json
+
   x-model-tags: IUDX
+
   x-version: 0.0.1
